thumbinator-ws2812b: Fix makefile

--- a/firmware/thumbinator-ws2812b/Makefile
+++ b/firmware/thumbinator-ws2812b/Makefile
@@ -42,7 +42,7 @@ C_SOURCES = \
   Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr.c \
   Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr_ex.c \
   Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash.c \
-  Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash_ex.c  
+  Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash_ex.c
 ASM_SOURCES = \
   startup/startup_stm32f072xb.s
 
@@ -56,7 +56,7 @@ AR = arm-none-eabi-ar
 SZ = arm-none-eabi-size
 HEX = $(CP) -O ihex
 BIN = $(CP) -O binary -S
- 
+
 #######################################
 # CFLAGS
 #######################################
@@ -102,7 +102,7 @@ vpath %.c $(sort $(dir $(C_SOURCES)))
 OBJECTS += $(addprefix $(BUILD_DIR)/,$(notdir $(ASM_SOURCES:.s=.o)))
 vpath %.s $(sort $(dir $(ASM_SOURCES)))
 
-$(BUILD_DIR)/%.o: %.c Makefile | $(BUILD_DIR) 
+$(BUILD_DIR)/%.o: %.c Makefile | $(BUILD_DIR)
 	$(CC) -c $(CFLAGS) -Wa,-a,-ad,-alms=$(BUILD_DIR)/$(notdir $(<:.c=.lst)) $< -o $@
 
 $(BUILD_DIR)/%.o: %.s Makefile | $(BUILD_DIR)
@@ -114,19 +114,23 @@ $(BUILD_DIR)/$(TARGET).elf: $(OBJECTS) Makefile
 
 $(BUILD_DIR)/%.hex: $(BUILD_DIR)/%.elf | $(BUILD_DIR)
 	$(HEX) $< $@
-	
+
 $(BUILD_DIR)/%.bin: $(BUILD_DIR)/%.elf | $(BUILD_DIR)
-	$(BIN) $< $@	
-	
+	$(BIN) $< $@
+
 $(BUILD_DIR):
-	mkdir -p $@		
+	mkdir -p $@
+
+flash:
+	@echo Press and hold FLASH, then press RST, then release FLASH before running this command
+	dfu-util -D $(BUILD_DIR)/$(TARGET).bin -a 0 -R -v -s 0x08000000
 
 #######################################
 # clean up
 #######################################
 clean:
 	-rm -fR .dep $(BUILD_DIR)
-  
+
 #######################################
 # dependencies
 #######################################
