--- a/firmware/thumbinator-ws2812b/Makefile
+++ b/firmware/thumbinator-ws2812b/Makefile
@@ -27,8 +27,8 @@ BUILD_DIR = build
 C_SOURCES = \
   Src/stm32f0xx_it.c \
   Src/stm32f0xx_hal_msp.c \
-  Src/main.c \
   Src/system_stm32f0xx.c \
+  Src/main.c \
   Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim.c \
   Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim_ex.c \
   Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc.c \
@@ -121,7 +121,7 @@ $(BUILD_DIR)/%.bin: $(BUILD_DIR)/%.elf | $(BUILD_DIR)
 $(BUILD_DIR):
 	mkdir -p $@
 
-flash:
+flash: $(BUILD_DIR)/$(TARGET).bin
 	@echo Press and hold FLASH, then press RST, then release FLASH before running this command
 	dfu-util -D $(BUILD_DIR)/$(TARGET).bin -a 0 -R -v -s 0x08000000
 
